# django_stripe_payment

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  app.logs  create_admin.py  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
config/: logging.py  settings.py  urls.py
store/: admin.py  models.py  tests.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_orderitem_options_item_discount_item_tax.py
templates/: 404.html  500.html  base.html  checkout.html  item_detail.html  item_list.html  success.html
