[project]
name = "django-stripe-payment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "dotenv>=0.9.9",
    "lint>=1.2.1",
    "psycopg2-binary>=2.9.10",
    "python-stripe>=0.0.6",
    "ruff>=0.12.7",
    "whitenoise>=6.9.0",
]
